--- a/invoice-backend/package.json
+++ b/invoice-backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "escpos": "^3.0.0-alpha.6",
     "escpos-serialport": "^3.0.0-alpha.4",
+    "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "serialport": "^9.2.8"
